--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <h2>Custom Burger:</h2>
       <form id="custom-burger">
         <label>Name:</label>
-        <input type="text" name="name" id="burger-name">
+        <input type="text" name="name" id="burger-name" value="">
         <br/>
         <label>Description:</label>
-        <input type="text" name="description" id="burger-description">
+        <input type="text" name="description" id="burger-description" value="">
         <br/>
         <label>Image URL:</label>
-        <input type="text" name="url" id="burger-image">
+        <input type="text" name="url" id="burger-image" value="">
         <br/>
         <br/>
         <input type="submit" value="Submit Order"></input>
